fix edge case for contrast calculation (#191)
* fix edge case for contrast calculation

* oops

--- a/demos/src/contrast-checker/contrast-checker.scss
+++ b/demos/src/contrast-checker/contrast-checker.scss
@@ -157,7 +157,7 @@ body {
 
 	.contrast-combination {
 		margin-bottom: 12px;
-		max-width: 280px;
+		max-width: 320px;
 
 		.o-forms-title__main {
 			display: inline-block;
